feat: Update DoctorLeaveApproveRequestDTO and PatientProfile service; replace status string with enum and enhance profile update handling